# Dexter

./: .gitignore  AGENTS.md  Makefile  README.md  recent-code-changes-20260622-210150.txt  repomix-dexter.xml
config/: shell_integration.zsh
docs/: DEXTER_INSTRUCTIONS.md  DEXTER_OPERATOR_CONTROLS.md  DEXTER_PLACEMENT_CONTROLS.md  DEXTER_PROJECT_PROPOSAL.md  IMPLEMENTATION_PLAN.md  OLLAMA_MODEL_STORAGE.md  PHASE_13_SPEC.md  PHASE_14_SPEC.md  PHASE_15_SPEC.md  PHASE_16_SPEC.md  PHASE_17_SPEC.md  PHASE_18_SPEC.md  PHASE_19_SPEC.md  PHASE_1_SPIKE.md  PHASE_20_SPEC.md  PHASE_21_SPEC.md  PHASE_22_SPEC.md  PHASE_23_SPEC.md  PHASE_24_SPEC.md  PHASE_25_SPEC.md  PHASE_26_SPEC.md  PHASE_27_SPEC.md  PHASE_28_SPEC.md  PHASE_29_SPEC.md  PHASE_2_PLAN.md  PHASE_30_SPEC.md  PHASE_31_SPEC.md  PHASE_39_LIVE_VERIFICATION.md  PHASE_3_PLAN.md  PHASE_40_OPERATOR_STATUS.md  PHASE_41_SHARED_ACTION_EVIDENCE.md  PHASE_42_ACTION_HISTORY_SUMMARY_RPC.md  PHASE_43_HUD_ACTION_HISTORY_PARITY.md  PHASE_44_LIVE_EVIDENCE_CHECKPOINT.md  PHASE_45_CONTACTS_MESSAGE_RELIABILITY.md  PHASE_46_CONTEXT_CAPABILITY_SURFACING.md  PHASE_47_OPERATOR_LAUNCH_READINESS.md  PHASE_48_ACTION_PATH_SYMLINK_HARDENING.md  PHASE_49_PENDING_HEALTH_COPY.md  PHASE_4_PLAN.md  (+16 more)
scripts/: acceptance-status.sh  configure-ollama-models-env.sh  dexter-place.sh  diagnostic-bundle.sh  install-dexter-app.sh  live-acceptance-status-smoke.sh  live-action-cancel-smoke.sh  live-action-diagnostic-smoke.sh  live-action-receipts-smoke.sh  live-action-safety-shared-smoke.sh  live-ambient-actions-smoke.sh  live-ambient-events-smoke.sh  live-ambient-inbox-smoke.sh  live-ambient-trigger-actions-smoke.sh  live-approval-lifecycle-smoke.sh  live-barge-in-smoke.sh  live-browser-recovery-model-stability.sh  live-cli-smoke.sh  live-degraded-mode-smoke.sh  live-diagnostic-bundle-smoke.sh  live-dock-launcher-smoke.sh  live-external-failures-smoke.sh  live-hud-action-diagnostic-smoke.sh  live-hud-action-history-smoke.sh  live-hud-approval-smoke.sh  live-hud-health-smoke.sh  live-hud-smoke.sh  live-hud-ui-failure-smoke.sh  live-hud-unavailable-health-smoke.sh  live-message-contact-smoke.sh  live-operator-ready-smoke.sh  live-operator-status-smoke.sh  live-placement-command-smoke.sh  live-process-control-smoke.sh  live-recovery-smoke.sh  live-residency-proof-smoke.sh  live-run-loop-lifecycle-smoke.sh  (+21 more)
src/python-workers/: pyproject.toml
src/python-workers/dexter_workers.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/python-workers/tests/: test_browser_worker.py  test_protocol.py  test_stt_worker.py  test_tts_worker.py
src/python-workers/workers/: browser_worker.py  protocol.py  stt_worker.py  tts_worker.py
src/rust-core/: Cargo.toml  build.rs
src/rust-core/src/: action_diagnostic.rs  action_evidence.rs  ambient.rs  config.rs  constants.rs  context_observer.rs  diagnostics.rs  humor.rs  logging.rs  main.rs  operator_context.rs  orchestrator.rs
src/rust-core/src/action/: audit.rs  engine.rs  executor.rs  mod.rs  policy.rs  ui_diagnostics.rs
src/rust-core/src/browser/: coordinator.rs  diagnostics.rs  mod.rs
src/rust-core/src/context/: candidate.rs  compiler.rs  diagnostics.rs  ledger.rs  mod.rs  prompt_manifest.rs  representation.rs  turn_record.rs
src/rust-core/src/inference/: engine.rs  error.rs  interceptor.rs  mod.rs  models.rs  retrieval_classifier.rs  router.rs
src/rust-core/src/ipc/: mod.rs  server.rs
src/rust-core/src/memory/: commands.rs  extractor.rs  mod.rs
src/rust-core/src/personality/: layer.rs  mod.rs
src/rust-core/src/proactive/: engine.rs  mod.rs
src/rust-core/src/retrieval/: mod.rs  pipeline.rs  store.rs  web.rs
src/rust-core/src/session/: mod.rs  state.rs
src/rust-core/src/system/: memory.rs  mod.rs  residency.rs
src/rust-core/src/voice/: coordinator.rs  mod.rs  protocol.rs  sentence.rs  worker_client.rs
(+93 files in other folders)
